uploads: fix bug with gap between image and filesize.
Fixes https://github.com/danbooru/danbooru/issues/5382#issuecomment-1370761404

--- a/app/components/media_asset_component/media_asset_component.scss
+++ b/app/components/media_asset_component/media_asset_component.scss
@@ -65,11 +65,16 @@
 
     .media-asset-container {
       aspect-ratio: var(--media-asset-width) / var(--media-asset-height);
-      height: max-content;
+      height: fit-content;
     }
   }
 
   &.media-asset-component-fit-width {
+    .media-asset-container {
+      width: fit-content;
+      width: intrinsic; // XXX Safari hack, testcase: https://danbooru.donmai.us/media_assets/4784100
+    }
+
     .media-asset-image {
       height: auto;
       max-width: 100%;
